--- a/index.html
+++ b/index.html
@@ -1,91 +1,65 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
   <head>
-    <title>BaBaBall - BaBapedia</title>
+    <meta charset="utf-8" />
+    <title>Search Engine - Super Awesome</title>
   </head>
   <body>
-    <h1>BaBa Species</h1>
-    <h2>Intro</h2>
+    <h1>Youtube</h1>
+    <form action="https://www.youtube.com/results?">
+      <label>Search for:</label>
+      <input type="text" name="search_query" />
+      <button>Enter</button>
+    </form>
 
-    <p>
-      BaBas are special species. They are on the verge of extinction. There are
-      only two <span>BaBas</span> in the world.
-    </p>
+    <h1>Google</h1>
+    <form action="https://www.google.com/search?">
+      <label>Search for:</label>
+      <input type="text" name="q" />
+      <button>Enter</button>
+    </form>
 
-    <h3><a href="https://github.com/thhuang">BaBaPig</a></h3>
-    <p>
-      BaBaPig is a round pig. He does only two things every day. Sleep and
-      eat!<br />
-      So, that why he is getting rounder and rounder.
-    </p>
+    <h1>Wikipedia</h1>
+    <form action="https://en.wikipedia.org/wiki/">
+      <label>Search for:</label>
+      <input type="text" name="search" />
+      <button>Enter</button>
+    </form>
 
-    <h3><a href="profil.html">BaBaSeal</a></h3>
-    <p>
-      BaBaSeal is a thin seal. She loves BaBaPig so much. Now she is going to be
-      a Engineer. <br />Earn a lot of money and feed her BaBaPig!!!
-    </p>
+    <h1>Reddit</h1>
+    <form action="https://www.reddit.com/search">
+      <label>Search for:</label>
+      <input type="text" name="q" />
+      <button>Enter</button>
+    </form>
 
-    <h2>Ability</h2>
-    <ul>
-      <li>BaBaKiss</li>
-      <li>BaBaHug</li>
-      <li>Eat</li>
-      <li>Sleep</li>
-      <li>Code</li>
-    </ul>
-    <table>
-      <thead>
-        <tr>
-          <th rowspan="2"></th>
-          <th rowspan="2">Gender</th>
-          <th rowspan="2">Shape</th>
-          <th colspan="2">Info</th>
-        </tr>
-        <tr>
-          <th>cm</th>
-          <th>kg</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th>BaBaPig</th>
-          <td>&#9794; Boy</td>
-          <td>round</td>
-          <td>170</td>
-          <td>65</td>
-        </tr>
-        <tr>
-          <th>BaBaSeal</th>
-          <td>&#9792; Girl</td>
-          <td>flat</td>
-          <td>150</td>
-          <td>42</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr />
-    <footer>
-      <h3>Contribution</h3>
-      <form action="/NewItem">
-        <p>
-          <label for="name">Enter a new Baba's name:</label>
-          <input type="text" placeholder="Tzu Hsuan" id="name" name="name" />
-        </p>
-        <p>
-          <label for="ball">Does it look like a ball?</label>
-          <input type="checkbox" id="ball" name="check" />
-        </p>
-        <p>
-          <label for="color">Select a color for it:</label>
-          <input type="color" id="color" name="color" />
-        </p>
-        <p>
-          <label for="born">When was it born?</label>
-          <input type="date" id="born" name="date" />
-        </p>
-        <button type="button">Submit</button>
-      </form>
-    </footer>
+    <h1>Github</h1>
+    <form action="https://github.com/search?">
+      <label>Search for:</label>
+      <input type="text" name="q" />
+      <button>Enter</button>
+    </form>
+
+    <h1>Facebook</h1>
+    <p>Please log in first!</p>
+    <form action="https://www.facebook.com/search/top?">
+      <label>Search for:</label>
+      <input type="text" name="q" />
+      <button>Enter</button>
+    </form>
+
+    <h1>Google Translate</h1>
+    <form action=" https://translate.google.com.tw/">
+      <label>Search for:</label>
+      <input type="text" name="q" />
+      <button>Enter</button>
+    </form>
+
+    <h1>dict.cc</h1>
+    <form action="https://www.dict.cc/?s=feuer">
+      <label>Search for:</label>
+      <input type="text" name="s" />
+      <button>Enter</button>
+    </form>
   </body>
 </html>
