change docu name and add the size

--- a/practice/baba.html
+++ b/practice/baba.html
@@ -87,12 +87,18 @@
         <p>
           <label for="s">Choose a size:</label>
           <label for="s">S</label>
-          <input type="radio" name="size" id="s" value="s" />
+          <input type="radio" name="size" id="s" value="S" />
           <label for="m">M</label>
-          <input type="radio" name="size" id="m" value="m" />
+          <input type="radio" name="size" id="m" value="M" />
+          <label for="l">L</label>
+          <input type="radio" name="size" id="l" value="L" />
+          <label for="xl">XL</label>
+          <input type="radio" name="size" id="xl" value="XL" />
+          <label for="xll">XLL</label>
+          <input type="radio" name="size" id="xll" value="XLL" />
         </p>
 
-        <button type="button">Submit</button>
+        <button>Submit</button>
       </form>
     </footer>
   </body>
