--- a/index.html
+++ b/index.html
@@ -62,4 +62,33 @@
       <button>Enter</button>
     </form>
   </body>
+  <hr />
+  <footer>
+    <h2>Contact Us</h2>
+    <form action="/contact">
+      <div>
+        <label for="username">NAME</label>
+        <br />
+        <input type="text" name="username" id="username" required />
+      </div>
+      <div>
+        <label for="email">EMAIL</label>
+        <br />
+        <input type="email" name="email" id="email" required />
+      </div>
+      <div>
+        <label for="message">MESSAGE</label>
+        <br />
+        <textarea
+          name="message"
+          id="message"
+          cols="30"
+          rows="10"
+          placeholder="Write your suggestions"
+          required
+        ></textarea>
+      </div>
+      <button>SUBMIT</button>
+    </form>
+  </footer>
 </html>
