--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
       <button>Enter</button>
     </form>
 
-    <h1>Facebook</h1>
-    <p>Please log in first!</p>
-    <form action="https://www.facebook.com/search/top?">
+    <h1>Amazon</h1>
+    <form action="https://www.amazon.com/s?">
       <label>Search for:</label>
-      <input type="text" name="q" />
+      <input type="text" name="k" />
       <button>Enter</button>
     </form>
 
