--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="app.css" />
     <title>Search Engine - Super Awesome</title>
   </head>
   <body>
